[package]
name = "resvg-spin"
authors = ["Clayton Davis <claytondus@gmail.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
resvg = "0.43.0"
usvg = { version = "0.43.0", default-features = false }
spin-sdk = "3.0.1"
tiny-skia = "0.11.4"

[workspace]
